--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 			border: 6px rgb(204,205,198);
 			border-style: solid;
 			text-align: center;
+
+		.container{
+			text-align: center;
+		}
 	</style>
 </head>
 <body>
@@ -18,6 +22,7 @@
 	<div><img src="Chatukchak.png" alt="Chatukchak"></div>
 	
 	<table cellspacing="10">
+	<div class="container">
 		<th colspan="5"><pre><font size="6">S P E C I A L T Y   D R I N K S</font></pre></th>
 		<tr>
 			<td><img src="https://www.chatukchak.com/images/menu/Black-Fire-Tiger.jpg?v=20231115041206" id="Black Fire Tiger" width="210" height="220"></td>
@@ -80,6 +85,7 @@
 			<td><input type="submit" id="submit" name="submit" value="Add To Basket"></td>
 			<td><input type="submit" id="submit" name="submit" value="Add To Basket"></td>
 		</tr>
+	</div>
 	</table>
 
 	<p>This links to : <a href="https://www.chatukchak.com/menu.php" target="_blank">Cha Tuk Chak Official Website</a></p>
